--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,1 +1,25 @@
-Hi Hello
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<base href="/">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="css/style.css">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.20/angular-ui-router.min.js"></script>
+<script src="js/app.js"></script>
+<script src="js/app.route.js"></script>
+<script src="js/main.controller.js"></script>
+<script src="js/content.controller.js"></script>
+<script src="js/login.controller.js"></script>
+<script src="js/feed.controller.js"></script>
+<script src="js/service.js"></script>
+</head>
+<body ng-app="libraryApp" ng-controller="MainController">
+	<div ui-view></div>
+</body>
+</html>
